--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "generate-password",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,7 +15,8 @@
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-password-strength-bar": "^0.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
